fixed intro text align

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -60,6 +60,7 @@ h2.intro {
     color: white;
     text-align: justify;
     font-size: 1.5em;
+    margin-left: -3%;
 }
 
 p.creds {
